implement react-router for boilerplate

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+SC:400,700');
+@import 'components/index';
 
 body {
   font-family: 'Noto Sans SC', sans-serif;
+  margin: 0;
 }
